--- a/CustomSteamTools/TF2TradingToolkit/MainWindow.xaml
+++ b/CustomSteamTools/TF2TradingToolkit/MainWindow.xaml
@@ -130,6 +130,8 @@
                        VerticalAlignment="Center" />
           </StackPanel>
         </TabItem.Header>
+        
+        <v:RangeView x:Name="RangeView" />
       </TabItem>
     </TabControl>
     
